src/index.css
* {
  box-sizing: border-box;
}

html,
body,
#root {
  height: 100%;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;
  border: 1px solid #eee;
}

::-webkit-scrollbar-thumb {
  border: 1px solid #eee;
  border-radius: 8px;
  background: rgba(0, 0, 0, 0.2);
}

a:-webkit-any-link {
  color: inherit;
  text-decoration: none;
}

.DraftEditor-root * {
  -webkit-user-select: text;
}

.MuiDialog-root {
  z-index: 2147483647;
}

